--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -51,7 +51,7 @@ figure > div {
 }
 
 .avatar {
-  background: url('../img/thomas.jpg');
+  background: url('../img/croped_skipper.jpg');
   background-size: contain;
   opacity: 0;
   animation: .5s ease-in 1s fadeIn forwards;
